+title attribute for accesskey field

--- a/1-elems-attributes.htm
+++ b/1-elems-attributes.htm
@@ -35,7 +35,7 @@ In HTML5, the global nature of the tabindex attribute adds focusability to all e
 
 
 <h3>accesskey</h3>
-The accesskey attribute’s value creates keyboard shortcuts. For example, &ltinput accesskey="s" name="search" type="text"/> creates a search input box <input type="text" name="search" accesskey="s"/> with an accesskey of s. When the user presses on the letter “s,” the focus moves to the search input.
+The accesskey attribute’s value creates keyboard shortcuts. For example, &ltinput accesskey="s" name="search" type="text"/> creates a search input box <input type="text" name="search" accesskey="s" title="For fast transfer to this field press Alt+S in Chrome" /> with an accesskey of s. When the user presses on the letter “s,” the focus moves to the search input.
 But itin different browsers work's a little different: <i>Internet Explorer</i>: Alt + S, <i>Chrome</i>: Alt + S
 <i>Opera</i>: Shift + Esc, S, <i>Safari</i>: Alt + S, <i>Firefox</i>: Shift + Alt + S
 
